[gd_scene load_steps=23 format=2]

[ext_resource path="res://sprites/asteroids/asteroid-5.png" type="Texture" id=1]
[ext_resource path="res://sprites/ships/ship.png" type="Texture" id=2]
[ext_resource path="res://sprites/HUD/missel.png" type="Texture" id=3]
[ext_resource path="res://sprites/HUD/Radar_Frame.png" type="Texture" id=4]
[ext_resource path="res://sprites/ships/Spaceships_LightMask.png" type="Texture" id=5]
[ext_resource path="res://scenes/scripts/createAccount.gd" type="Script" id=6]
[ext_resource path="res://sprites/Scenario/background.png" type="Texture" id=7]
[ext_resource path="res://sprites/Coletaveis/resize-16472845821497879661background01.jpeg" type="Texture" id=8]

[sub_resource type="DynamicFontData" id=31]
font_path = "res://sprites/Fonts/GravityBold8.ttf"

[sub_resource type="DynamicFont" id=47]
size = 4
font_data = SubResource( 31 )

[sub_resource type="DynamicFontData" id=46]
font_path = "res://sprites/Fonts/GravityBold8.ttf"

[sub_resource type="DynamicFont" id=48]
size = 6
font_data = SubResource( 46 )

[sub_resource type="DynamicFontData" id=44]
font_path = "res://sprites/Fonts/F77MinecraftRegular-0VYv.ttf"

[sub_resource type="DynamicFont" id=49]
size = 6
font_data = SubResource( 44 )

[sub_resource type="DynamicFontData" id=53]
font_path = "res://sprites/Fonts/F77MinecraftRegular-0VYv.ttf"

[sub_resource type="DynamicFont" id=54]
size = 3
font_data = SubResource( 53 )

[sub_resource type="DynamicFontData" id=39]
font_path = "res://sprites/Fonts/GravityBold8.ttf"

[sub_resource type="DynamicFont" id=50]
size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 39 )

[sub_resource type="DynamicFontData" id=51]
font_path = "res://sprites/Fonts/GravityBold8.ttf"

[sub_resource type="DynamicFont" id=52]
size = 11
font_data = SubResource( 51 )

[sub_resource type="DynamicFontData" id=55]
font_path = "res://sprites/Fonts/GravityBold8.ttf"

[sub_resource type="DynamicFont" id=56]
size = 5
font_data = SubResource( 55 )

[node name="createAccount" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 7 )
centered = false

[node name="Resize-16472845821497879661Background01" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.635294 )
texture = ExtResource( 8 )
centered = false

[node name="scoreboard" type="Node2D" parent="."]
pause_mode = 2
position = Vector2( 0, 7 )

[node name="confirm" type="Node2D" parent="scoreboard"]
visible = false
position = Vector2( 41, 31 )

[node name="yes" type="Button" parent="scoreboard/confirm"]
margin_left = 53.0
margin_top = 135.0
margin_right = 65.0
margin_bottom = 160.0
rect_rotation = 90.0

[node name="no" type="Button" parent="scoreboard/confirm"]
margin_left = 72.0
margin_top = 153.0
margin_right = 84.0
margin_bottom = 217.0
rect_rotation = 90.0

[node name="label4" type="Label" parent="scoreboard/confirm"]
margin_top = 135.0
margin_right = 80.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 47 )
text = "Okay"
align = 1
valign = 1

[node name="label7" type="Label" parent="scoreboard/confirm"]
margin_top = 153.0
margin_right = 80.0
margin_bottom = 165.0
custom_fonts/font = SubResource( 47 )
text = "deixa eu voltar"
align = 1
valign = 1

[node name="label5" type="Label" parent="scoreboard/confirm"]
margin_left = -2.0
margin_top = 69.0
margin_right = 82.0
margin_bottom = 78.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.964706, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 48 )
text = "Cuidado bro"
align = 1
valign = 1

[node name="label6" type="Label" parent="scoreboard/confirm"]
margin_top = 88.0
margin_right = 80.0
margin_bottom = 125.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 49 )
text = "Você não poderá modificar seu nome, escolha com sabedoria!"
align = 1
valign = 3
autowrap = true

[node name="login" type="Node2D" parent="scoreboard"]

[node name="SpaceshipsLightMask" type="Sprite" parent="scoreboard/login"]
self_modulate = Color( 1, 1, 1, 0.858824 )
position = Vector2( 164.021, 84.7741 )
rotation = 1.5708
scale = Vector2( 0.30648, 12.3372 )
texture = ExtResource( 5 )
centered = false

[node name="Label" type="Label" parent="scoreboard/login"]
margin_left = 46.0
margin_top = 135.0
margin_right = 171.0
margin_bottom = 153.0
custom_fonts/font = SubResource( 54 )
text = "Isso inclui o uso de hacks, clients modificados, difamação de usuários, flood, ataques DDoS, dentre outros..."
autowrap = true

[node name="name" type="LineEdit" parent="scoreboard/login"]
modulate = Color( 1, 1, 1, 0.611765 )
self_modulate = Color( 1, 1, 1, 0.576471 )
margin_left = 29.0
margin_top = 97.0
margin_right = 131.0
margin_bottom = 113.0
custom_colors/selection_color = Color( 1, 1, 1, 1 )
custom_colors/cursor_color = Color( 1, 1, 1, 1 )
custom_colors/clear_button_color_pressed = Color( 0.796078, 0.772549, 0.772549, 1 )
custom_colors/font_color_selected = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 50 )
align = 1
max_length = 15
placeholder_text = "Crie seu nome"
placeholder_alpha = 1.0

[node name="enviar" type="Button" parent="scoreboard/login"]
margin_left = 52.0
margin_top = 150.0
margin_right = 197.0
margin_bottom = 230.0
rect_scale = Vector2( 0.4, 0.3 )
disabled = true
icon = ExtResource( 4 )
flat = true
expand_icon = true

[node name="label" type="Label" parent="scoreboard/login"]
margin_left = 34.0
margin_top = 153.0
margin_right = 127.0
margin_bottom = 171.0
custom_fonts/font = SubResource( 47 )
text = "Criar conta"
align = 1
valign = 1

[node name="label2" type="Label" parent="scoreboard/login"]
margin_left = 1.0
margin_top = -5.0
margin_right = 159.0
margin_bottom = 19.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.964706, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 48 )
text = "Criar conta Mineware - v 1.0"
align = 1
valign = 1

[node name="label3" type="Label" parent="scoreboard/login"]
margin_left = 3.0
margin_top = 13.0
margin_right = 136.0
margin_bottom = 70.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 49 )
text = "Jogue e participe de rankings on-line dentro da plataforma, receba prêmios e tenha todos os seus dados e estatísticas de jogo registradas dentro da sua conta Mineware, que legal!"
valign = 2
autowrap = true

[node name="Ship" type="Sprite" parent="scoreboard/login"]
position = Vector2( 15, 105 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
hframes = 2

[node name="Asteroid-5" type="Sprite" parent="scoreboard/login"]
position = Vector2( 15, 132 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Missel" type="Sprite" parent="scoreboard/login"]
position = Vector2( 14, 158 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="CheckButton" type="CheckButton" parent="scoreboard/login"]
visible = false
margin_left = 32.0
margin_top = 123.0
margin_right = 342.0
margin_bottom = 163.0
rect_scale = Vector2( 0.3, 0.3 )
custom_fonts/font = SubResource( 52 )
text = "Eu prezo por um jogo limpo"
align = 2

[node name="CheckBox" type="CheckBox" parent="scoreboard/login"]
margin_left = 27.0
margin_top = 121.0
margin_right = 232.0
margin_bottom = 145.0
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = SubResource( 56 )
text = "Eu prezo por um jogo limpo"

[connection signal="pressed" from="scoreboard/confirm/yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="scoreboard/confirm/no" to="." method="_on_no_pressed"]
[connection signal="pressed" from="scoreboard/login/enviar" to="." method="_on_enviar_pressed"]
[connection signal="toggled" from="scoreboard/login/CheckBox" to="." method="_on_CheckBox_toggled"]
